fix: final fix on alignment on info section items

--- a/styles.css
+++ b/styles.css
@@ -128,16 +128,17 @@ body {
 .info-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  max-width: 780px;
+  width: 800px;
   vertical-align: top;
   margin-top: 30px;
-  justify-items: space-between;
+  justify-items: space-evenly;
   
 }
 
 .info-sub-container{
   max-width: 160px;
-  margin-left: 30px;
+  display: grid;
+  justify-self: center;
 }
 
 .info-text {
@@ -162,8 +163,6 @@ body {
   border: solid;
   border-color: #3882F6;
   border-radius: 10px;
-  display: flex;
-  justify-self: center;
 }
 
 .quote-section {
